--- a/home.html
+++ b/home.html
@@ -1,8 +1,71 @@
 <!DOCTYPE html>
+<!--
 <head>
-  <!-- include bootstrap here -->
   <title>home page</title>
+  <img src="assets/homepage.jpg" alt="Welcome to UBC iGEM 2018's homepage!" width="20" height="2000">
 </head>
 <body>
   home page
 </body>
+-->
+
+
+<html>
+ <head>
+   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+ <!-- bootstrap -->
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+ <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+ <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <style>
+  * {
+   margin:0;
+   padding: 0;
+  }
+  html, body {
+    height:100%;
+    width:100%;
+}
+  .imgbox {
+   display: grid;
+   height: 100%;
+  }
+  .center-fit {
+   max-width: 100%;
+   max-height: 100%;
+   margin: auto;
+  }
+.bgimg {
+    height: 100%;
+    width: 100%;
+    background-position: center left;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.no-margin {
+  margin: 0px;
+  box-sizing: content-box;
+}
+</style>
+ </head>
+ <body>
+   Home Page
+  <div class = "bgimg imgbox row no-margin" style= "background-image: url('assets/homepage1.jpg');">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    </div>
+    <div class = "bgimg imgbox row no-margin" style= "background-image: url('assets/homepage2.jpg');">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      </div>
+      <div class = "bgimg imgbox row no-margin" style= "background-image: url('assets/homepage3.jpg');">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        </div>
+        <div class = "bgimg imgbox row no-margin" style= "background-image: url('assets/homepage4.jpg');">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          </div>
+ </body>
