--- a/human-practices.html
+++ b/human-practices.html
@@ -8,20 +8,100 @@
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-
   <!-- jquery and bootstrap scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <!-- external styelsheet -->
-  <link rel="stylesheet" href="styles/navbar.css">
+  <!-- <link rel="stylesheet" href="styles/navbar.css"> -->
 
   <style>
+
+  h1{
+    font: Neoteric;
+    color: #4A857E;
+    font-size: 42pt;
+    -webkit-text-stroke: 1.7px;
+    font-weight:lighter;
+  }
+  h2{
+    font: Neoteric;
+    color: #4A857E;
+    font-size: 26pt;
+    -webkit-text-stroke: 1.7px;
+    font-weight:lighter;
+  }
+
+  p {
+    font: GeosansLight;
+    color: black;
+    font-size: 12pt;
+  }
+
+  img {
+    width:281px;
+    height:281px;
+    border: 2px solid #4e8781;
+    border-radius: 50%;
+  }
+
+  img:hover {
+    border: 2px solid #f4c9c2;
+  }
+
+  .row {
+    margin-bottom: 10px;
+  }
+
   </style>
 
 </head>
 <body>
-  human-practices
+
+  <div class="container container-fluid">
+    <div class = "row">
+      <h1>HUMAN PRACTICES SILVER</h1>
+    </div>
+    <div class = "row">
+      <h2>OVERVIEW</h2>
+    </div>
+    <div class = "row">
+      <p>
+        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+      </p>
+    </div>
+
+    <div class="row">
+      <h2>INTERVIEWS</h2>
+    </div>
+
+    <div class="row">
+      <div class="col-md">
+        <img src="assets/test.jpeg">
+      </div>
+      <div class="col-md">
+        <img src="assets/test.jpeg">
+      </div>
+      <div class="col-md">
+        <img src="assets/test.jpeg">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md">
+        <img src="assets/test.jpeg">
+      </div>
+      <div class="col-md">
+        <img src="assets/test.jpeg">
+      </div>
+      <div class="col-md">
+        <img src="assets/test.jpeg">
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
+
 </body>
 </html>
