--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
 </head>
 <body>
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <a class="navbar-brand" href="#"><img id="logo_image" src="assets/logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
